# PetFeeder

./: .gitignore  README.md  compiler_run_MSP430.sh  msp_spi.c  servo.c  servo.h  telegram.cpp
projetoFinal/: CMakeLists.txt  activate.agent  compile_n_run.sh  main.cpp  scanBowl.cpp  scanBowl.h
